<resources>
    <string name="app_name">Counsel</string>
    <string name="title_activity_register_user">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_btn">Login</string>
    <string name="swipe_left_to_register">Not registered? Click to Register</string>
    <string name="Register_title">Register</string>
    <string name="Login_title">Login</string>
    <string name="counsellor_profile_text">Counsellor Profile</string>
    <string name="your_name">Your name</string>
    <string name="describe_yourself">Describe Yourself</string>
    <string name="counselee_profile">Counselee Profile</string>
    <string name="hello_would_be_a_good_start">Hello would be a good start</string>
</resources>
